# portfolio-projects

./: Array1.php  Array2.php  Array3.php  Array4.php  Array5.php  Array6.php  Array7.php  CNAME  Cent Calculator.cpp  CollatzSequence.java  Decisions.php  Documents  Enumeration.cpp  EvenFibonacciNumbers.java  HighlyDvisibleTriangular.java  Insert_Book_Database.php  Lab 2 Final.cpp  LargeSum.java  LargestPalindrome.java  LargestPrimeFactor.java  LargestProductInGrid.java  LargestProductInSeries.java  Looping.php  Page3.php  Page4.php  Page5.php  Pass-by-Reference.cpp  PowerDigitSum.java  ProgressBar.txt  README.md  Random Numbers - Average.cpp  Results_Book_Database.php  SecrectDB.php  SmallestMultiple.java  Sorting Project.cpp  SpecialPythagoreanTriplet.java  SumAvg.c  SumSquareDifference.java  SummationOfPrimes.java  TenThousandOnePrime.java  (+2 more)
Angular/: Angular-GettingStarted-Workspace.code-workspace
CS6035-InfoSecurity/: README.md
CS6300-SoftwareDevProcess/: .gitignore
CS6340-SoftwareAnalysisTest/Lab_1/fuzzing/part2/: CMakeLists.txt
CS6340-SoftwareAnalysisTest/Lab_1/fuzzing/part2/include/: Instrument.h  Mutate.h  Utils.h
CS6340-SoftwareAnalysisTest/Lab_1/fuzzing/part2/src/: Part2Fuzzer.cpp  Part2Mutate.cpp
CS6340-SoftwareAnalysisTest/Lab_1/fuzzing/part2/test/: easy.c  hidden3  sanity.c
CS6603-AIEithcs/: README.md
CS7646-MachLearningForTrading/: README.md
CSS/: CSS1.css  W3CSS.css
Documents/: Marcus_Anderson_Resume.docx  init.txt
Final Project/: NationIns.html  SAE.html  SportsTeams.html  UTHistory.html  Visitor.html  mjafinal.html
(+500 files in other folders)
